html 101% scrollbar fix and contact nav return fix

--- a/public/css/new.css
+++ b/public/css/new.css
@@ -1,8 +1,11 @@
+html{
+    height:101%;
+    }
+
 html p {
 font-size: 12px;
 color: #981811;
 line-height: 2px;
-
 
 }
 
